force-app/main/default/objects/Sentinel_Config__mdt/Sentinel_Config__mdt.object-meta.xml
<CustomObject>
    <label>Sentinel Config</label>
    <pluralLabel>Sentinel Configs</pluralLabel>
</CustomObject>