force-app/main/default/objects/Sentinel_Config__mdt/fields/Amount_Field__c.field-meta.xml
<CustomField>
    <fullName>Amount_Field__c</fullName>
    <label>Amount Field</label>
    <description>Optional numeric field to surface as dollar value (e.g. Amount on Opportunity), for dollar-weighted prioritization.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>