force-app/main/default/objects/Sentinel_Config__mdt/fields/Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Date_Field__c</fullName>
    <label>Date Field</label>
    <description>Field used to measure staleness (e.g. LastActivityDate, LastModifiedDate).</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>