force-app/main/default/objects/Sentinel_Config__mdt/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <label>Filter Criteria</label>
    <description>Optional extra WHERE clause fragment (e.g. IsClosed = false).</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>