force-app/main/default/objects/Sentinel_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>When unchecked, this config is skipped by rollups and the daily monitor.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>