force-app/main/default/objects/Sentinel_Config__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <description>Friendly name shown back to the user ("Open Cases", "Active Pipeline").</description>
    <type>Text</type>
    <length>255</length>
</CustomField>