force-app/main/default/objects/Sentinel_Config__mdt/fields/Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Name_Field__c</fullName>
    <label>Name Field</label>
    <description>Field used as the record's display name. Defaults to Name; use CaseNumber for Case, Subject for Task.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>