force-app/main/default/objects/Sentinel_Config__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <description>Standard object to monitor (Case, Opportunity, Lead, Task).</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <unique>true</unique>
</CustomField>