force-app/main/default/objects/Sentinel_Config__mdt/fields/Owner_Field__c.field-meta.xml
<CustomField>
    <fullName>Owner_Field__c</fullName>
    <label>Owner Field</label>
    <description>Usually OwnerId, but configurable for lookups like Case.ContactId.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>