force-app/main/default/objects/Sentinel_Config__mdt/fields/Priority_Field__c.field-meta.xml
<CustomField>
    <fullName>Priority_Field__c</fullName>
    <label>Priority Field</label>
    <description>Optional field to surface in output (Priority, StageName, Status).</description>
    <type>Text</type>
    <length>255</length>
</CustomField>