force-app/main/default/objects/Sentinel_Config__mdt/fields/Sort_Direction__c.field-meta.xml
<CustomField>
    <fullName>Sort_Direction__c</fullName>
    <label>Sort Direction</label>
    <description>ASC or DESC. Defaults to ASC (oldest first).</description>
    <type>Text</type>
    <length>4</length>
</CustomField>