force-app/main/default/objects/Sentinel_Config__mdt/fields/Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>Sort_Field__c</fullName>
    <label>Sort Field</label>
    <description>Optional field to order results by. Defaults to the Date Field (oldest first).</description>
    <type>Text</type>
    <length>255</length>
</CustomField>