force-app/main/default/objects/Sentinel_Config__mdt/fields/Stale_Days__c.field-meta.xml
<CustomField>
    <fullName>Stale_Days__c</fullName>
    <label>Stale Days</label>
    <description>Threshold, in days, before a record counts as at-risk.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>