force-app/main/default/objects/Sentinel_Config__mdt/fields/Threshold_Alert__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Alert__c</fullName>
    <label>Threshold Alert</label>
    <description>Optional. When the daily monitor finds a stale count at or above this number, it raises a custom notification.</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>